atualização da Api- Access Base Data

--- a/DockerDefinitivo.Api/appsettings.json
+++ b/DockerDefinitivo.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionDapper": "server=192.168.1.10;userid=root;password=idec29;database=basesalao"
+    "ConnectionDapper": "server=gomesconsultor.ddns.net;userid=root;password=idec29;database=basesalao"
   },
   "Logging": {
     "LogLevel": {
